<resources>
    <string name="app_name">Recetario Social</string>
    <string name="activity_main_usuario_validate">El nombre de usuario no puede estar vacío</string>
    <string name="activity_main_email_validate">Introduce un correo electrónico válido</string>
    <string name="activity_main_password_validate">La contraseña debe tener al menos 8 caracteres</string>
    <string name="introduce_el_titulo_de_la_receta">Introduce el título de la receta</string>
    <string name="descripcion">Descripción</string>
    <string name="toca_para_seleccionar_imagen">Toca para seleccionar imagen</string>
    <string name="estado">Estado</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="agregar_ingrediente">Agregar Ingrediente</string>
    <string name="pasos">Pasos</string>
    <string name="agregar_paso">Agregar Paso</string>
    <string name="crear_receta">Crear Receta</string>
    <string name="titulo">Título</string>
    <string name="cantidad">Cantidad</string>
    <string name="eslogan_Inicio">Crea y comparte tus recetas</string>
    <string name="registrarse_btn">Registrarse</string>
    <string name="iniciar_sesion_btn">Iniciar Sesion</string>
    <string name="por_usuario">Por Usuario</string>
    <string name="seguir">Seguir</string>
    <string name="titulo_de_la_receta">Título de la receta</string>
    <string name="mexico_estado">México, Estado: Sinaloa</string>
    <string name="btn_agregar_a_favoritos">Agregar a Favoritos</string>
    <string name="comentarios">Comentarios</string>
    <string name="escribe_un_comentario">Escribe un comentario...</string>
    <string name="btn_enviar">Enviar</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="introduce_tu_nombre_de_usuario">Introduce tu nombre de usuario</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="nombre_app_social_recipes">Social Recipes</string>
    <string name="texto_buscador">Buscar por nombre de receta</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="perfil_nombre_de_usuario">Nombre de usuario</string>
    <string name="perfil_texto_email">Email</string>
    <string name="perfil_texto_biografia">Biografia</string>
    <string name="btn_actualizar_datos">Actualizar Datos</string>
    <string name="btn_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="et_texto_nombre_del_ingrediente">Nombre del ingrediente</string>
    <string name="et_texto_cantidad">Cantidad (ej. 200g, 2 piezas)</string>
    <string name="item_texto_usuario">Usuario</string>
    <string name="item_texto_comentario">Este es un comentario...</string>
    <string name="item_texto_ingrediente">Ingrediente</string>
    <string name="item_texto_100g">100g</string>
    <string name="item_texto_descripcion_del_paso">Descripción del paso...</string>
    <string name="item_texto_titulo_de_la_receta">Titulo de la Receta</string>
    <string name="item_texto_descripcion_breve">Descripción breve...</string>
    <string name="item_texto_ubicacion">Ubicación</string>
</resources>